# ruffle-ios

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build-in-xcode.sh  rust-toolchain.toml
.cargo/: config.toml
Assets.xcassets/logo-anim.dataset/: Contents.json
Assets.xcassets/ruf-document.imageset/: Contents.json
Assets.xcassets/ruffle-blue-6.colorset/: Contents.json
Assets.xcassets/ruffle-blue-9.colorset/: Contents.json
Assets.xcassets/ruffle-blue.colorset/: Contents.json
Assets.xcassets/ruffle-orange.colorset/: Contents.json
Assets.xcassets/swf-document.imageset/: Contents.json
Base.lproj/: LaunchScreen.storyboard  Main.storyboard
Ruffle.xcdatamodeld/: .xccurrentversion
Ruffle.xcdatamodeld/ruffle_ios.xcdatamodel/: contents
ruffle-ios/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
ruffle-ios.xcodeproj/: project.pbxproj
ruffle-ios/Base.lproj/: Main.storyboard
ruffle_ios.xcdatamodeld/: .xccurrentversion
src/: app_delegate.rs  delegate.rs  edit_controller.rs  lib.rs  library_controller.rs  logo_view.rs  main.rs  player_controller.rs  player_view.rs  ruffle_view.rs  scene_delegate.rs  storyboard_connections.h
